--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,6 @@
     -->
 
     <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+    <script src="https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js"></script>
   </body>
 </html>
