--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
     <script src="https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js"></script>
   </body>
 </html>
